# ArcadeRendering

./: .gitignore  CMakeLists.txt  README.md
include/: assetManager.hpp  cinematicEngine.hpp  dustParticles.hpp  gameManager.h  lightingSystem.hpp
include/game/: block.hpp  entity.hpp  gameManager.hpp  states.hpp
shaders/: arcade.fsh  arcade.vsh  debug.fsh  debug.vsh  depth.fsh  depth.vsh  dust.fsh  dust.vsh  example.fsh  example.vsh  game_entity.fsh  game_entity.vsh  game_hud.fsh  game_hud.vsh  game_tile.fsh  game_tile.vsh  post_shader.fsh  post_shader.vsh  room.fsh  skybox.fsh  skybox.vsh
src/: assetManager.cpp  audioPlayer.cpp  audioPlayer.hpp  cinematicEngine.cpp  dustParticles.cpp  gameManager.cpp  lightingSystem.cpp  main.cpp
src/game/: block.cpp  entity.cpp  gameManager.cpp  states.cpp
